added checks for input and pass phrase, ironed out bugs, finished file writing logic with conversion to readable characters